assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 9 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 62 conflicts: 9 shift/reduce
State 65 conflicts: 9 shift/reduce
State 66 conflicts: 5 shift/reduce
State 85 conflicts: 9 shift/reduce
State 92 conflicts: 9 shift/reduce
State 93 conflicts: 5 shift/reduce
State 94 conflicts: 5 shift/reduce
State 95 conflicts: 5 shift/reduce
State 96 conflicts: 5 shift/reduce
State 99 conflicts: 9 shift/reduce
State 100 conflicts: 9 shift/reduce
State 127 conflicts: 9 shift/reduce
State 138 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: %empty
    7             | feature ';'
    8             | feature_list feature ';'

    9 feature: method
   10        | attr

   11 method: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'

   12 attr: OBJECTID ':' TYPEID init

   13 init: %empty
   14     | ASSIGN expression

   15 formal_list: %empty
   16            | formal
   17            | formal_list ',' formal

   18 formal: OBJECTID ':' TYPEID

   19 expression_block: %empty
   20                 | ';'
   21                 | expression ';'
   22                 | expression_block ';' expression ';'

   23 expression_list: %empty
   24                | expression
   25                | expression_list ',' expression

   26 expression: OBJECTID ASSIGN expression
   27           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression '.' OBJECTID '(' expression_list ')'
   29           | OBJECTID '(' expression_list ')'
   30           | IF expression THEN expression ELSE expression FI
   31           | WHILE expression LOOP expression POOL
   32           | '{' expression_block '}'
   33           | LET let_list
   34           | CASE expression OF case_list ESAC
   35           | NEW TYPEID
   36           | ISVOID expression
   37           | expression '+' expression
   38           | expression '-' expression
   39           | expression '*' expression
   40           | expression '/' expression
   41           | '~' expression
   42           | expression '<' expression
   43           | expression LE expression
   44           | expression '=' expression
   45           | NOT expression
   46           | '(' expression ')'
   47           | OBJECTID
   48           | INT_CONST
   49           | STR_CONST
   50           | BOOL_CONST
   51           | error

   52 let_list: OBJECTID ':' TYPEID IN expression
   53         | OBJECTID ':' TYPEID ',' let_list
   54         | OBJECTID ':' TYPEID ASSIGN expression IN expression
   55         | OBJECTID ':' TYPEID ASSIGN expression ',' let_list

   56 case_list: case
   57          | case_list case

   58 case: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 27 28 29 46
')' (41) 11 27 28 29 46
'*' (42) 39
'+' (43) 37
',' (44) 17 25 53 55
'-' (45) 38
'.' (46) 27 28
'/' (47) 40
':' (58) 11 12 18 52 53 54 55 58
';' (59) 4 5 7 8 20 21 22 58
'<' (60) 42
'=' (61) 44
'@' (64) 27
'{' (123) 4 5 11 32
'}' (125) 4 5 11 32
'~' (126) 41
error (256) 51
CLASS (258) 4 5
ELSE (259) 30
FI (260) 30
IF (261) 30
IN (262) 52 54
INHERITS (263) 5
LET (264) 33
LOOP (265) 31
POOL (266) 31
THEN (267) 30
WHILE (268) 31
CASE (269) 34
ESAC (270) 34
OF (271) 34
DARROW (272) 58
NEW (273) 35
ISVOID (274) 36
STR_CONST (275) 49
INT_CONST (276) 48
BOOL_CONST (277) 50
TYPEID (278) 4 5 11 12 18 27 35 52 53 54 55 58
OBJECTID (279) 11 12 18 26 27 28 29 47 52 53 54 55 58
ASSIGN (280) 14 26 54 55
NOT (281) 45
LE (282) 43
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
feature_list (49)
    on left: 6 7 8, on right: 4 5 8
feature (50)
    on left: 9 10, on right: 7 8
method (51)
    on left: 11, on right: 9
attr (52)
    on left: 12, on right: 10
init (53)
    on left: 13 14, on right: 12
formal_list (54)
    on left: 15 16 17, on right: 11 17
formal (55)
    on left: 18, on right: 16 17
expression_block (56)
    on left: 19 20 21 22, on right: 22 32
expression_list (57)
    on left: 23 24 25, on right: 25 27 28 29
expression (58)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51, on right: 11 14 21 22 24 25 26 27 28 30
    31 34 36 37 38 39 40 41 42 43 44 45 46 52 54 55 58
let_list (59)
    on left: 52 53 54 55, on right: 33 53 55
case_list (60)
    on left: 56 57, on right: 34 57
case (61)
    on left: 58, on right: 56 57


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (feature_list)]
    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 12
    feature       go to state 13
    method        go to state 14
    attr          go to state 15


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


State 11

   11 method: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   12 attr: OBJECTID . ':' TYPEID init

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


State 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 19

    feature  go to state 20
    method   go to state 14
    attr     go to state 15


State 13

    7 feature_list: feature . ';'

    ';'  shift, and go to state 21


State 14

    9 feature: method .

    $default  reduce using rule 9 (feature)


State 15

   10 feature: attr .

    $default  reduce using rule 10 (feature)


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (feature_list)]
    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 22
    feature       go to state 13
    method        go to state 14
    attr          go to state 15


State 17

   11 method: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 24
    formal       go to state 25


State 18

   12 attr: OBJECTID ':' . TYPEID init

    TYPEID  shift, and go to state 26


State 19

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 27


State 20

    8 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 28


State 21

    7 feature_list: feature ';' .

    $default  reduce using rule 7 (feature_list)


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 29

    feature  go to state 20
    method   go to state 14
    attr     go to state 15


State 23

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


State 24

   11 method: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   17 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


State 25

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


State 26

   12 attr: OBJECTID ':' TYPEID . init

    ASSIGN  shift, and go to state 33

    $default  reduce using rule 13 (init)

    init  go to state 34


State 27

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 28

    8 feature_list: feature_list feature ';' .

    $default  reduce using rule 8 (feature_list)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


State 30

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 31

   11 method: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 37


State 32

   17 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 23

    formal  go to state 38


State 33

   14 init: ASSIGN . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 54


State 34

   12 attr: OBJECTID ':' TYPEID init .

    $default  reduce using rule 12 (attr)


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


State 37

   11 method: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 55


State 38

   17 formal_list: formal_list ',' formal .

    $default  reduce using rule 17 (formal_list)


State 39

   51 expression: error .

    $default  reduce using rule 51 (expression)


State 40

   30 expression: IF . expression THEN expression ELSE expression FI

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 56


State 41

   33 expression: LET . let_list

    OBJECTID  shift, and go to state 57

    let_list  go to state 58


State 42

   31 expression: WHILE . expression LOOP expression POOL

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 59


State 43

   34 expression: CASE . expression OF case_list ESAC

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 60


State 44

   35 expression: NEW . TYPEID

    TYPEID  shift, and go to state 61


State 45

   36 expression: ISVOID . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 62


State 46

   49 expression: STR_CONST .

    $default  reduce using rule 49 (expression)


State 47

   48 expression: INT_CONST .

    $default  reduce using rule 48 (expression)


State 48

   50 expression: BOOL_CONST .

    $default  reduce using rule 50 (expression)


State 49

   26 expression: OBJECTID . ASSIGN expression
   29           | OBJECTID . '(' expression_list ')'
   47           | OBJECTID .

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 47 (expression)


State 50

   45 expression: NOT . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 65


State 51

   41 expression: '~' . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 66


State 52

   32 expression: '{' . expression_block '}'

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    ';'         shift, and go to state 67
    '('         shift, and go to state 53

    '}'  reduce using rule 19 (expression_block)
    ';'  [reduce using rule 19 (expression_block)]

    expression_block  go to state 68
    expression        go to state 69


State 53

   46 expression: '(' . expression ')'

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 70


State 54

   14 init: ASSIGN expression .
   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression

    LE   shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79

    $default  reduce using rule 14 (init)


State 55

   11 method: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 80


State 56

   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   30           | IF expression . THEN expression ELSE expression FI
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression

    THEN  shift, and go to state 81
    LE    shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77
    '<'   shift, and go to state 78
    '='   shift, and go to state 79


State 57

   52 let_list: OBJECTID . ':' TYPEID IN expression
   53         | OBJECTID . ':' TYPEID ',' let_list
   54         | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   55         | OBJECTID . ':' TYPEID ASSIGN expression ',' let_list

    ':'  shift, and go to state 82


State 58

   33 expression: LET let_list .

    $default  reduce using rule 33 (expression)


State 59

   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   31           | WHILE expression . LOOP expression POOL
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression

    LOOP  shift, and go to state 83
    LE    shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77
    '<'   shift, and go to state 78
    '='   shift, and go to state 79


State 60

   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   34           | CASE expression . OF case_list ESAC
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression

    OF   shift, and go to state 84
    LE   shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79


State 61

   35 expression: NEW TYPEID .

    $default  reduce using rule 35 (expression)


State 62

   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   36           | ISVOID expression .
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression

    LE   shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79

    LE        [reduce using rule 36 (expression)]
    '+'       [reduce using rule 36 (expression)]
    '-'       [reduce using rule 36 (expression)]
    '*'       [reduce using rule 36 (expression)]
    '/'       [reduce using rule 36 (expression)]
    '@'       [reduce using rule 36 (expression)]
    '.'       [reduce using rule 36 (expression)]
    '<'       [reduce using rule 36 (expression)]
    '='       [reduce using rule 36 (expression)]
    $default  reduce using rule 36 (expression)


State 63

   26 expression: OBJECTID ASSIGN . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 85


State 64

   29 expression: OBJECTID '(' . expression_list ')'

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    ')'  reduce using rule 23 (expression_list)
    ','  reduce using rule 23 (expression_list)

    expression_list  go to state 86
    expression       go to state 87


State 65

   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression
   45           | NOT expression .

    LE   shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79

    LE        [reduce using rule 45 (expression)]
    '+'       [reduce using rule 45 (expression)]
    '-'       [reduce using rule 45 (expression)]
    '*'       [reduce using rule 45 (expression)]
    '/'       [reduce using rule 45 (expression)]
    '@'       [reduce using rule 45 (expression)]
    '.'       [reduce using rule 45 (expression)]
    '<'       [reduce using rule 45 (expression)]
    '='       [reduce using rule 45 (expression)]
    $default  reduce using rule 45 (expression)


State 66

   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   41           | '~' expression .
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression

    LE   shift, and go to state 71
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79

    LE        [reduce using rule 41 (expression)]
    '@'       [reduce using rule 41 (expression)]
    '.'       [reduce using rule 41 (expression)]
    '<'       [reduce using rule 41 (expression)]
    '='       [reduce using rule 41 (expression)]
    $default  reduce using rule 41 (expression)


State 67

   20 expression_block: ';' .

    $default  reduce using rule 20 (expression_block)


State 68

   22 expression_block: expression_block . ';' expression ';'
   32 expression: '{' expression_block . '}'

    '}'  shift, and go to state 88
    ';'  shift, and go to state 89


State 69

   21 expression_block: expression . ';'
   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression

    LE   shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    ';'  shift, and go to state 90
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79


State 70

   27 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | expression . '.' OBJECTID '(' expression_list ')'
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . LE expression
   44           | expression . '=' expression
   46           | '(' expression . ')'

    LE   shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    ')'  shift, and go to state 91
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79


State 71

   43 expression: expression LE . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 92


State 72

   37 expression: expression '+' . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 93


State 73

   38 expression: expression '-' . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 94


State 74

   39 expression: expression '*' . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 95


State 75

   40 expression: expression '/' . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 96


State 76

   27 expression: expression '@' . TYPEID '.' OBJECTID '(' expression_list ')'

    TYPEID  shift, and go to state 97


State 77

   28 expression: expression '.' . OBJECTID '(' expression_list ')'

    OBJECTID  shift, and go to state 98


State 78

   42 expression: expression '<' . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 99


State 79

   44 expression: expression '=' . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 100


State 80

   11 method: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expression '}'

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 101


State 81

   30 expression: IF expression THEN . expression ELSE expression FI

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 102


State 82

   52 let_list: OBJECTID ':' . TYPEID IN expression
   53         | OBJECTID ':' . TYPEID ',' let_list
   54         | OBJECTID ':' . TYPEID ASSIGN expression IN expression
   55         | OBJECTID ':' . TYPEID ASSIGN expression ',' let_list

    TYPEID  shift, and go to state 103


State 83

   31 expression: WHILE expression LOOP . expression POOL

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 104


State 84

   34 expression: CASE expression OF . case_list ESAC

    OBJECTID  shift, and go to state 105

    case_list  go to state 106
    case       go to state 107


State 85
